# aidoku-community-sources

./: .gitignore  index.json  index.min.json
sources/: en.alphascans-v1.aix  en.coloredmanga-v3.aix  en.comiconlinefree-v1.aix  en.dynastyscans-v1.aix  en.hentaifox-v1.aix  en.koushoku-v1.aix  en.kumascans-v1.aix  en.lilymanga-v3.aix  en.mangabat-v1.aix  en.mangafox-v1.aix  en.manganato-v1.aix  en.mangapill-v1.aix  en.mangatx-v3.aix  en.manhuaplus-v3.aix  en.nepnep-v3.aix  en.readcomicsbook-v1.aix  en.readcomicsfree-v1.aix  en.readkomik-v1.aix  en.readm-v1.aix  en.reaperscans-v3.aix  en.resetscans-v3.aix  en.tcbscans-v2.aix  en.toonily-v3.aix  en.xoxocomics-v1.aix  es.tumangaonline-v1.aix  fr.blackarmy-v1.aix  multi.asurascans-v1.aix  multi.mangadex-v2.aix  multi.myrockmanga-v1.aix  multi.nhentai-v1.aix  multi.otakusan-v1.aix  ru.hentai-chan-v2.aix  ru.manga-chan-v2.aix  ru.yaoi-chan-v2.aix  vi.blogtruyen-v1.aix  vi.fecomic-v3.aix  vi.hentaicube-v3.aix  vi.hentaivn-v1.aix  vi.lkdtt-v1.aix  vi.nettruyen-v1.aix  (+9 more)
src/rust/zh.manhuagui/: Cargo.toml  build.ps1
src/rust/zh.manhuagui/res/: filters.json  source.json
src/rust/zh.manhuagui/src/: consts.rs  helper.rs  lib.rs  utils.rs
src/rust/zh.manhuagui/src/parser/: manga_chapters.rs  manga_detail.rs  manga_list.rs  mod.rs
